<resources>
    <string name="app_name">Instagram</string>
    <string name="username">Phone number, email or username</string>
    <string name="password">Password</string>
    <string name="LogIn">Log In</string>
    <string name="forgot">Forgotten your login details? Get help with logging in.</string>
    <string name="or">OR</string>
    <string name="fblogin"> Log In With Facebook</string>
    <string name="noAcc">Don\'t have an account?</string>
    <string name="signUp">Sign Up.</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="reels">Reels</string>
    <string name="instagramlogo">instagramLogo</string>

    <string name="facebook_app_id">763382444566282</string>
    <string name="fb_login_protocol_scheme">fb763382444566282</string>
    <string name="facebook_client_token">56789</string>


</resources>