<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <ImageView
            android:id="@+id/instaLogo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/instagram_color_logo_generated"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="100dp" />


        <ImageView
            android:id="@+id/instaId"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:src="@drawable/ic_instagram_wordmark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/instaLogo"
            android:contentDescription="@string/instagramlogo" />

        <EditText
            android:id="@+id/username"
            android:background="@drawable/name_box"
            android:layout_width="350dp"
            android:padding="5dp"
            android:layout_height="50dp"
            android:textColor="#808080"
            android:hint="@string/username"

            android:textAlignment="textStart"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/instaId" />

        <EditText
            android:id="@+id/password"
            android:layout_width="350dp"
            android:background="@drawable/name_box"
            android:padding="5dp"
            android:layout_height="50dp"
            android:textColor="#808080"
            android:textAlignment="viewStart"
            android:hint="@string/password"
            android:textAllCaps="false"
            android:layout_marginTop="10dp"
            android:drawableEnd="@drawable/ic_baseline_remove_red_eye_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username" />

        <Button
            android:id="@+id/loginn"
            android:textColorHint="@color/white"
            android:backgroundTint="@color/bright_blue"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:textAllCaps="false"
            android:text="@string/LogIn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password" />

        <TextView
            android:id="@+id/forgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginn" />

        <TextView
            android:id="@+id/or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forgot" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fblogin"
            android:textColor="@color/bright_blue"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:drawablePadding="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/or"
            app:drawableStartCompat="@drawable/ic_facebook_01" />

        <View
            android:id="@+id/separation"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/silver"
            android:layout_marginBottom="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />


        <TextView
            android:id="@+id/noAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginStart="105dp"
            android:text="@string/noAcc"
            android:textColorHint="@color/silver"
            app:layout_constraintTop_toBottomOf="@+id/separation"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="105dp"
            android:text="@string/signUp"
            android:textColor="@color/dark_blue"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/noAccount"
            app:layout_constraintStart_toEndOf="@id/noAccount"
            app:layout_constraintTop_toTopOf="@+id/noAccount" />


</androidx.constraintlayout.widget.ConstraintLayout>